# incubatormanager

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  Tiltfile  docker-compose.tilt.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.gitlab/ci/: backend.yml  e2e.yml  frontend.yml
.omc/: project-memory.json
.omc/sessions/: 080ad7c9-81c2-4c42-99fe-e74832ffc8e2.json
docs/: AGENT_HANDOFF.md  architecture.md  checkpoint-presentation-guide.md  contributing.md  deploy.md  events.md  implementation-audit-report.md  sdl-phase2-review-notes.md  service-architecture-report.md  user.md
docs/defense/: checklist.md  demo-script.md  generate_powerpoint_deck.py  ilb-incubator-defense-deck.pptx  local-qa-evidence.md  release-evidence.md  slides.md
e2e/: gateway_auth.spec.ts  playwright.config.ts
frontend/: .env.local.example  .eslintrc.json  .gitignore  Dockerfile  middleware.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
gateway/: Dockerfile  docs-index.html  nginx.conf
infra/: Tiltfile  docker-compose.apparmor.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.tilt-health.yml  docker-compose.yml
libs/py-common/: pyproject.toml
libs/py-common/ilb_common/: __init__.py  auth_headers.py  bootstrap.py  event_bus.py  permissions.py
libs/py-common/tests/: test_auth_headers.py  test_bootstrap.py  test_event_bus.py  test_exchange_bootstrap.py  test_permissions.py
scripts/: generate-env.sh
(+391 files in other folders)
